# PicoLogicOS

./: .bazelrc  .clang-tidy  .gitignore  .sccignore  LICENSE  MODULE.bazel  README.ZH-CN.md  README.md  bazel.sh  build.py  build_api.py  copyright-template.c  dump-fndef.sh  init.sh  scan-build.sh  项目架构.md
base/: BUILD  README.md  amalgamate  build.py  build.sh
base/include/: asm.h  base.h  base.hpp  build.py  coroutine.h  define.h  define.hpp  platform.h  ubsan.h  ubscan.h
base/src/: ubscan.c
base/stdinc/: README.md
docs/: 模块.md  项目架构.md
docs/k1/: 1.md
docs/readme/: README.ZH-CN.md
kernel/: BUILD  build.py
kernel/include/: build.py  kernel.h
kernel/lds/: amd64.ld  riscv-uboot.ld
kernel/riscv-uboot/: boot.cmd  boot.scr  build.sh  kernel.elf  main.c  start.asm
kernel/scripts/: limine.conf  run-efi.sh
kernel/src/: error.c  linux-app.c  logging.c  main.amd64.c  main.ia32.c
libs/: BUILD  build.py
libs/algorithm/: base.h  bm.h  kmp.h  main.c  main.cpp
libs/asio/: asio.c
libs/c/: exit.c
libs/c++/: main.c  main.cpp
libs/data-structure/: base.hpp  main.c  main.cpp
libs/driver/: BUILD  build.py
libs/include/: algorithm.h  algorithm.hpp  data-structure.h  data-structure.hpp  limine.h  pthread.h
libs/kmman/: BUILD  build.py
libs/misc/: BUILD  build.py
libs/pthread/: BUILD  build.py
libs/sound/: BUILD  build.py
libs/ui/: BUILD  build.py
loader/: build.py
project/: BUILD
test/: BUILD  bazel-test.c  plos-header-test.c
tools/: BUILD  README.md  __init__.py  cli.py  env.py  logging.py
tools/bazel/: arch_flags.bzl  (+5 more)
util/: BUILD
(+268 files in other folders)
